# synapgrad

./: .gitignore  README.md  basic_example.ipynb  basic_mlp_example.ipynb  pyproject.toml  requirements.txt  setup.py  trace_graph.ipynb
.github/: graph_example
assets/: graph_example
deeplib/: activations.py  engine.py  layers.py  losses.py  models.py  modules.py  neurons.py  nn.py  optimizers.py  trainer.py  utils.py
deeplib/nn/: __init__.py  activations.py  layers.py  losses.py  modules.py  neurons.py
deeplib/optim/: __init__.py  optimizers.py
deeplib/utils/: train.py
examples/: basic_mlp.ipynb  mnist_cnn.ipynb  mnist_mlp.ipynb  trace_graph.ipynb  visualize_graph.ipynb
synapgrad/: __init__.py  autograd.py  conv_tools.py  cpu_ops.py  device.py  engine.py  functional.py  ops_cpu.py  tensor.py  tools.py  utils.py
synapgrad/nn/: __init__.py  activations.py  functional.py  init.py  initializations.py  layers.py  losses.py  modules.py  neurons.py
synapgrad/nn/utils/: __init__.py  data.py  train.py
synapgrad/optim/: __init__.py  optimizers.py
synapgrad/tensor/: __init__.py  autograd_functions.py  tensor.py  tools.py
synapgrad/utils/: __init__.py  data.py  graph.py  tools.py  train.py
synapgrad/visual/: __init__.py  graph.py
tests/: test_activations.py  test_engine.py  test_functional.py  test_initializers.py  test_layers.py  test_losses.py  test_ops.py  test_optimizers.py  test_training.py  utils.py
