[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "synapgrad"
version = "0.7.0"
description = "A lightweight autograd engine with a deep learning library and a Torch-like API, built from scratch"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Pablo García Mesa", email = "pgmesa.sm@gmail.com"}
]

dependencies = [
    "numpy>=1.23.5"
]

classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Machine Learning",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License"
]

[project.urls]
Homepage = "https://github.com/pgmesa/synapgrad"

[tool.setuptools]
packages = { find = { where = ["."], include = ["synapgrad", "synapgrad.*"]} }